schema/testdata/errors/expression_null_non_optional_field.keel
model Person {
    fields {
        name Text
        employer Company?
    }

    actions {
        create createPerson() with (employer.name) {
            //expect-error:18:29:AttributeExpressionError:'name' cannot be set to null
            @set(person.name = null)
            //expect-error:18:41:AttributeExpressionError:'country' cannot be set to null
            @set(person.employer.country = null)
        }
    }
}

model Company {
    fields {
        name Text
        country Text
        employees Person[]
    }
}
